get rid of asmhelper