@@ -20,6 +20,15 @@ loom {
     intermediaryUrl = "https://maven.rizecookey.net/net/fabricmc/intermediary/1.16_combat-6/intermediary-1.16_combat-6-v2.jar"
 
     runConfigs.configureEach {
+        if(it.name == "server") {
+            ideConfigGenerated = false
+            return
+        }
+
+        it.vmArg("--add-opens=java.base/java.net=ALL-UNNAMED")
+        it.vmArg("--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED")
+
+        ideConfigGenerated = true
         client()
         setDefaultMainClass("io.github.betterclient.client.launch.IDEMain")
     }
