@@ -17,6 +17,15 @@ repositories {
 
 loom {
     runConfigs.configureEach {
+        if(it.name == "server") {
+            ideConfigGenerated = false
+            return
+        }
+
+        it.vmArg("--add-opens=java.base/java.net=ALL-UNNAMED")
+        it.vmArg("--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED")
+
+        ideConfigGenerated = true
         client()
         setDefaultMainClass("io.github.betterclient.client.launch.IDEMain")
     }
